--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -15,7 +15,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 # #L%# Direct log messages to stdout
-log4j.rootLogger=DEBUG,stdout
+log4j.rootLogger=TRACE,stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
