--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,9 @@ stages:
   - canary
   - staging
   - production
+  - incremental rollout 10%
+  - incremental rollout 25%
+  - incremental rollout 50%
   - incremental rollout 100%
   - performance
   - cleanup
