--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,10 @@ variables:
 
   #HELM_HOST: localhost:44134
   #KUBE_NAMESPACE: orchestrator-local-production  #defined for a project in a gitblab
+  POSTGRES_ENABLED: "false"
   REVIEW_DISABLED: "true"
   STAGING_ENABLED: "true"
+
   HELM_UPGRADE_EXTRA_ARGS: --force
 
 stages:
