--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -7,8 +7,8 @@ enableSelector:
 deploymentApiVersion: apps/v1
 #address: 35.241.228.250.nip.io
 image:
-  url: "gitlab.iotcrawler.net:4567/search-enabler/search-enabler/master:91c69d0421c449e85504908700b0e6fa2e5c2a75"
-  #repository: gitlab.iotcrawler.net:4567/search-enabler/search-enabler/master
+  #url: "gitlab.iotcrawler.net:4567/search-enabler/search-enabler/master:91c69d0421c449e85504908700b0e6fa2e5c2a75"
+  url: "gitlab.iotcrawler.net:4567/search-enabler/search-enabler/master:latest"
   pullPolicy: IfNotPresent
   secrets:
     - name: gitlab-registry
