--- a/pom.xml
+++ b/pom.xml
@@ -257,7 +257,7 @@
       </testResource>
     </testResources>
 
-    <finalName>${git.branch}:latest</finalName>
+    <finalName>${git.branch}:${git.commit.id}</finalName>
 
     <plugins>
       <plugin>
@@ -311,9 +311,9 @@
               <!--<password></password>-->
             </auth>
             <!-- optional: create a tag based on the git commit id (via the git-commit-id plugin): -->
-                                   <tags>-->
+                                   <!-- <tags>
                                         <tag>latest</tag>
-                                    </tags>
+                                    </tags> -->
           </to>
           <!--                    <extraDirectories>-->
           <!--                        <paths>${agent-extraction-root}</paths>-->
