--- a/chart/templates/seach-enabler-deployment.yaml
+++ b/chart/templates/seach-enabler-deployment.yaml
@@ -39,7 +39,7 @@ spec:
             value: "{{ .Values.image.tag }}"
           - name: IOTCRAWLER_ORCHESTRATOR_URL
             #value: "http://indexing.indexing-9-staging:8080/ngsi-ld/"
-            #value: "http://ranking.ranking-16-staging:3003/ngsi-ld/"
-            value: "http://ranking.ranking-16-production:3003"
+            value: "http://ranking.ranking-16-staging:3003/ngsi-ld/"
+            #value: "http://ranking.ranking-16-production:3003/ngsi-ld/"
             #value: "http://scorpio.scorpiobroker-46-production:9090/ngsi-ld/"
             #value: "http://155.54.95.248:9090/ngsi-ld/"
