Siemens extensions for different data model, activated by extdatafetcher=true in application.properties

--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -15,3 +15,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 # #L%
+
+server.port=8083 
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true 
+spring.thymeleaf.prefix=classpath:/static/
+spring.thymeleaf.suffix=.html
+
+iotcrawler.graphql.extdatafetcher=true
