--- a/pom.xml
+++ b/pom.xml
@@ -18,17 +18,24 @@
     <version>2.1.6.RELEASE</version>
   </parent>
 
+  <packaging>war</packaging>
+
   <properties>
 <!--    <iotcrawler.orchestrator.version>1.0.7</iotcrawler.orchestrator.version>-->
-    <iotcrawler.core.version>1.0.5</iotcrawler.core.version>
-<!--    <git.branch></git.branch>-->
-<!--    <git.commit.id></git.commit.id>-->
+    <!--      <iotcrawler.core.version>1.0.5</iotcrawler.core.version> -->
+    <iotcrawler.core.version>1.0.10</iotcrawler.core.version>
+    <!--    <git.branch></git.branch>-->
+    <!--    <git.commit.id></git.commit.id>-->
 
     <junit.version>4.11</junit.version>
     <slf4j.version>1.7.15</slf4j.version>
 
     <spring-version>5.1.3.RELEASE</spring-version>
     <thymeleaf-version>3.0.11.RELEASE</thymeleaf-version>
+
+    <skipTests>true</skipTests>
+
+
   </properties>
 
   <dependencies>
@@ -257,7 +264,7 @@
       </testResource>
     </testResources>
 
-    <finalName>${git.branch}:${git.commit.id}</finalName>
+    <!-- finalName>${git.branch}:${git.commit.id}</finalName> -->
 
     <plugins>
       <plugin>
@@ -359,6 +366,18 @@
                 <root>src/main/java</root>
                 <root>src/test</root>
                 </roots>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <configuration>
+              <mainClass>com.agtinternational.iotcrawler.graphqlEnabler.HttpApplication</mainClass>
             </configuration>
           </execution>
         </executions>
